--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       python: 3.8
     commands:
 
+      - python3 -m pip install --upgrade pip
       # Upgrade AWS CLI to the latest version
       - pip install --upgrade awscli
 
