--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
     commands:
 
       - python3 -m pip install --upgrade pip
+      - pip install -r requirements.txt
       # Upgrade AWS CLI to the latest version
       - pip install --upgrade awscli
 
