increase memry and storage size

--- a/template.yml
+++ b/template.yml
@@ -34,6 +34,9 @@ Resources:
         Fn::GetAtt:
         - LambdaExecutionRole
         - Arn
+      MemorySize: 1024
+      EphemeralStorage:
+        Size: 1024
       Events:
         GetEvent:
           Type: Api
