--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ boto3==1.26.41
 botocore==1.29.41
 Brotli==1.0.9
 certifi==2022.12.7
+humanize==4.4.0
 jmespath==1.0.1
 mutagen==1.46.0
 pycryptodomex==3.16.0
