--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+black==22.12.0
 boto3==1.26.41
 botocore==1.29.41
 Brotli==1.0.9
 certifi==2022.12.7
+click==8.1.3
 jmespath==1.0.1
 mutagen==1.46.0
+mypy-extensions==0.4.3
+pathspec==0.10.3
+platformdirs==2.6.2
 pycryptodomex==3.16.0
 python-dateutil==2.8.2
 s3transfer==0.6.0
 six==1.16.0
+tomli==2.0.1
+typing-extensions==4.4.0
 urllib3==1.26.13
 websockets==10.4
 yt-dlp==2022.11.11
