--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,51 @@ tomli==2.0.1
 typing-extensions==4.4.0
 urllib3==1.26.13
 websockets==10.4
-yt-dlp==2022.11.11
+asttokens==2.2.1
+backcall==0.2.0
+black==22.12.0
+boto3==1.26.41
+botocore==1.29.41
+Brotli==1.0.9
+certifi==2022.12.7
+click==8.1.3
+comm==0.1.2
+debugpy==1.6.4
+decorator==5.1.1
+entrypoints==0.4
+executing==1.2.0
+ipykernel==6.19.4
+ipython==8.8.0
+jedi==0.18.2
+jmespath==1.0.1
+jupyter-client==7.4.8
+jupyter-core==5.1.2
+matplotlib-inline==0.1.6
+mutagen==1.46.0
+mypy-extensions==0.4.3
+nest-asyncio==1.5.6
+packaging==22.0
+parso==0.8.3
+pathspec==0.10.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.6.2
+prompt-toolkit==3.0.36
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycryptodomex==3.16.0
+Pygments==2.14.0
+python-dateutil==2.8.2
+pyzmq==24.0.1
+s3transfer==0.6.0
+six==1.16.0
+stack-data==0.6.2
+tomli==2.0.1
+tornado==6.2
+traitlets==5.8.0
+typing-extensions==4.4.0
+urllib3==1.26.13
+wcwidth==0.2.5
+websockets==10.4
+yt-dlp==2023.2.17
